Finished the project

--- a/code/index.html
+++ b/code/index.html
@@ -3,24 +3,129 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- Change the title below -->
-  <title>This is the main title of the News Site</title>
+  <title>Travel Today</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
+
+
 <body>
+
+  <!-- Logo and navbar -->
+
   <header>
-    <!-- Some kind of logo and navbar -->
+
+    <div class="header">
+      <a href="#default" class="logo">Travel Today</a>
+      <div class="header-right">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </div>
+
   </header>
 
-  <section class="big-news">
-    <!-- The big news content -->
+  <!-- Logo and navbar ends -->
+
+
+  <!-- News cards -->
+
+  <section>
+
+    <div class="container">
+
+      <div class="image-grid">
+
+        <div class="card stacked featured">
+          <img src="./assets/madeira1.jpeg" alt="Picture of a wall" class="card__img">
+          <div class="card__content" onclick='location.href = "#";'>
+            <h2 class="card__title">Renting in Madeira</h2>
+            <p class="card__text">We met with two Madeira newcomers who gave us their best tips on finding apartments to
+              rent,
+              monthly costs and much more.</p>
+
+          </div>
+        </div>
+
+        <div class="card stacked">
+          <img src="./assets/madeira2.jpeg" alt="Picture of garden" class="card__img">
+          <div class="card__content">
+            <h2 class="card__title">Jardim Botanico</h2>
+            <p class="card__text">Is it worth the hype?</p>
+
+          </div>
+        </div>
+
+        <div class="card stacked">
+          <img src="./assets/madeira3.jpeg" alt="Picture of traffic" class="card__img">
+          <div class="card__content">
+            <h2 class="card__title">Cuicado!</h2>
+            <p class="card__text">Distracted pedestrian hit by car</p>
+
+          </div>
+        </div>
+
+        <div class="card stacked">
+          <img src="./assets/vietnam1.jpeg" alt="Picture of cafe" class="card__img">
+          <div class="card__content">
+            <h2 class="card__title">Saigon Cafe Guide</h2>
+            <p class="card__text">Vietnamese coffee lovers look no further!</p>
+
+          </div>
+        </div>
+
+        <div class="card stacked">
+          <img src="./assets/vietnam2.jpeg" alt="Picture of a building" class="card__img">
+          <div class="card__content">
+            <h2 class="card__title">Vietnamese architecture</h2>
+            <p class="card__text">Yeah...it's a must read</p>
+
+          </div>
+        </div>
+
+        <div class="card stacked">
+          <img src="./assets/vietnam3.jpg" alt="Picture of a food" class="card__img">
+          <div class="card__content">
+            <h2 class="card__title">Phó Sho</h2>
+            <p class="card__text">We found the best Phó spot in Hanoi</p>
+
+          </div>
+        </div>
+
+        <div class="card stacked">
+          <img src="./assets/vietnam4.jpg" alt="Picture of mural" class="card__img">
+          <div class="card__content">
+            <h2 class="card__title">Vietnamese street art</h2>
+            <p class="card__text">Five places to visit if you're a street art connoiseur</p>
+
+          </div>
+        </div>
+
+        <div class="card stacked">
+          <img src="./assets/stockholm.jpeg" alt="Picture of balconies" class="card__img">
+          <div class="card__content">
+            <h2 class="card__title">AirBnb's in Stockholm</h2>
+            <p class="card__text">Super expensive, right? Save money with these tips...</p>
+
+          </div>
+        </div>
+
+        <div class="card stacked">
+          <img src="./assets/fontainebleau.jpg" alt="Picture of a painted ceiling" class="card__img">
+          <div class="card__content">
+            <h2 class="card__title">Château de Fontainebleau</h2>
+            <p class="card__text">Beautiful and full of history</p>
+
+          </div>
+        </div>
+
   </section>
 
-  <section class="">
-    <!-- The other news  -->
-  </section>
+  <!-- News cards ends -->
+
+
 </body>
 
 </html>
