Changed the image directory.

--- a/code/index.html
+++ b/code/index.html
@@ -32,7 +32,7 @@
       <section class="header">
         <div class="grid-container">
           <div class="grid-item">
-            <img src="/assets/logo-black.png" alt="Gamla Banken Logo">
+            <img src="./assets/logo-black.png" alt="Gamla Banken Logo">
           </div>
           <div class="grid-item">
             <h1>Gamla Banken Coworking</h1>
@@ -45,7 +45,7 @@
       <!-- The latest news section -->
       <section class="latest-news-box">
         <div class="latest-news">
-          <img src="/assets/flex-platser.jpg" alt="bord med stolar hos gamla banken coworking">
+          <img src="./assets/flex-platser.jpg" alt="bord med stolar hos gamla banken coworking">
         </div>
         <div class="latest-news">
           <div class="news-text">
@@ -62,73 +62,73 @@
       <!-- The smaller news cards  -->
       <section class="news-cards">
         <div class="news">
-          <img src="/assets/platser.jpg" alt="skrivbord med skrivbordsstolar hos gamla banken coworking">
+          <img src="./assets/platser.jpg" alt="skrivbord med skrivbordsstolar hos gamla banken coworking">
           <h3>Kom och joina!</h3>
           <p>Är du inte säker på att Gamla Banken är en plats för dig. Kom och provsitt vetja!</p>
           <a href="none">Läs mer</a>
         </div>
         <div class="news">
-          <img src="/assets/fler-platser.jpg" alt="skrivbord och texten fler latser">
+          <img src="./assets/fler-platser.jpg" alt="skrivbord och texten fler latser">
           <h3>Vi har fler platser</h3>
           <p>Vi kickstartar 2024 med två nya platser. Vi välkomnar Elias och Johanna till sina nya skrivbord.</p>
           <a href="none">Läs mer</a>
         </div>
         <div class="news">
-          <img src="/assets/aw.jpg" alt="texten aw workshop föreläsning">  
+          <img src="./assets/aw.jpg" alt="texten aw workshop föreläsning">  
           <h3>Roliga planer</h3>
           <p>Vi hoppas kunna göra mycket kul här i lokalen framöver. Kanske en AW? En workshop? Eller varför inte en föreläsning? Hör av dig om du vill hitta på någonting kul!</p>
           <a href="none">Läs mer</a>
         </div>
         <div class="news">
-          <img src="/assets/helg.jpg" alt="hund som gäspar och texten trevlig helg">
+          <img src="./assets/helg.jpg" alt="hund som gäspar och texten trevlig helg">
           <h3>Trevlig helg!</h3>
           <p>Nu tar vi helg hörrni. Vi ses på måndag!</p>
           <a href="none">Läs mer</a>
         </div>
         <div class="news">
-          <img src="/assets/leverans.jpg" alt="lastbil och texten leverans">
+          <img src="./assets/leverans.jpg" alt="lastbil och texten leverans">
           <h3>Leverans</h3>
           <p>Fler skrivord åt folket!</p>
           <a href="none">Läs mer</a>
         </div>
         <div class="news">
-          <img src="/assets/lokalt.jpg" alt="texten heja lokalt!">
+          <img src="./assets/lokalt.jpg" alt="texten heja lokalt!">
           <h3>Lokala favoriter</h3>
           <p>Vi gillar ju att stötta det lokala - våra vänner här i Gagnef och Dalarna. Här är några av våra favoritkompisar:</p>
           <a href="none">Läs mer</a>
         </div>
         <div class="news">
-          <img src="/assets/gott-nytt-ar-stories.jpg" alt="ikon med konfetti och texten gott nytt år">
+          <img src="./assets/gott-nytt-ar-stories.jpg" alt="ikon med konfetti och texten gott nytt år">
           <h3>Gott nytt år!</h3>
           <p>Vi ses i januari 2024!</p>
           <a href="none">Läs mer</a>
         </div>
         <div class="news">
-          <img src="/assets/tack.jpg" alt="lussebullar ocg godis med texten tack">
+          <img src="./assets/tack.jpg" alt="lussebullar ocg godis med texten tack">
           <h3>Julmys</h3>
           <p>Tusen tack alla som kom och myste riktigt juligt med oss. Vi hade så trevligt att inte enda bild togs.</p>
           <a href="none">Läs mer</a>
         </div>
         <div class="news">
-          <img src="/assets/hacker.jpg" alt="man vid skrivbord med dator och flera skärmar">
+          <img src="./assets/hacker.jpg" alt="man vid skrivbord med dator och flera skärmar">
           <h3>Hacker</h3>
           <p>Love kör dubbla skärmar. Två kör en skärm. Och ett gäng här på Gamla Banken nöjer sig med sin laptop.</p>
           <a href="none">Läs mer</a>
         </div>
         <div class="news">
-          <img src="/assets/skylt.jpg" alt="fasad med skylt med gamla banken coworkings logga">
+          <img src="./assets/skylt.jpg" alt="fasad med skylt med gamla banken coworkings logga">
           <h3>Ja men titta!</h3>
           <p>En liten skylt har kommit upp - heja heja!</p>
           <a href="none">Läs mer</a>
         </div>
         <div class="news">
-          <img src="/assets/hej.jpg" alt="skylt med texten hej på en förstärkare">
+          <img src="./assets/hej.jpg" alt="skylt med texten hej på en förstärkare">
           <h3>Välkommen!</h3>
           <p>Hej och välkommen till Gamla Banken.</p>
           <a href="none">Läs mer</a>
         </div>
         <div class="news">
-          <img src="/assets/gamla-banken-moodbard.jpg" alt="moodboard över inredning på gamla banken coworking">
+          <img src="./assets/gamla-banken-moodbard.jpg" alt="moodboard över inredning på gamla banken coworking">
           <h3>Moodboard</h3>
           <p>Bakom kulisserna planeras det för fullt. Färger, möbler, inredning, stil. You name it!</p>
           <a href="none">Läs mer</a>
