added more styles, cleaned up the code

--- a/code/index.html
+++ b/code/index.html
@@ -39,9 +39,8 @@
     </div>
   </header>
 
-  <section class="big-news">
     <!-- The big news content -->
-
+  <section class="big-news">
     <div class="main-card-content">
       <a href="link to article">
         <img class="feature-image" src="./assets/dog-scientist.jpg" alt="dog looking through microscope">
@@ -52,10 +51,8 @@
         <h2 class="main-card-title">
           <a href="link to article">Nine Lives</a>
         </h2>
-        <div>
-          <button class="main-card-button">Share
-          </button>
-        </div>
+        <button class="main-card-button">Share
+        </button>
     </div>
 
     <div class="main-card-content">
@@ -65,11 +62,10 @@
           of this miracle.</a>
       </p>
     </div>
-
   </section>
 
   <section>
-    <h2 class="big-small-news-divider">More top stories</h2>
+    <h2 class="news-divider">More top stories</h2>
   </section>
 
   <!-- The other news  -->
@@ -82,14 +78,14 @@
         <a href="link to article">Yodeling Yorkie</a>
       </h3>
       <p class="small-card-text">
-        <a target="_blank" href="">Famous singer Yodeling Yorkie fills every seat at his first concert of his European
-          Tour.</a>
+        <a target="_blank" href="">Famous singer Yodeling Yorkie fills every seat at his first concert of his European Tour.</a>
       </p>
     </div>
 
     <div class="small-card">
       <a href="link to article">
-        <img src="./assets/paw mittens.jpg" class="small-card-img" alt="mittens with dog"></a>
+        <img src="./assets/paw mittens.jpg" class="small-card-img" alt="mittens with dog">
+      </a>
       <h3 class="small-card-header">
         <a href="link to article">10 Best Paw Warmers</a>
       </h3>
@@ -126,7 +122,7 @@
       <a href="link to article">
         <img src="./assets/dog kibble.jpg" class="small-card-img" alt=" dog kibble">
       </a>
-      <h3 class=" small card header">
+      <h3 class=" small-card-header">
         <a href="link to article">New Kibble Flavor</a>
       </h3>
       <p class="small-card-text">
@@ -169,11 +165,9 @@
         <a target="_blank" href="">The proper way to greet fellow furrends at the dog park.</a>
       </p>
     </div>
-
   </section>
 
   <footer class="footer">
-
     <div class="footer-div">
       <p class="creator">By Ji Yoo |</p>
       <p class="creator">Spring 2024</p>
@@ -186,9 +180,15 @@
 
     <div class="footer-div">
       <ul class="footer-list">
-        <li class="footer-item"><a class="linkedin" href="">Linkedin</a></li>
-        <li class="footer-item"><a href="#facebook">Facebook</a></li>
-        <li class="footer-item"><a href="#instagram">Instagram</a></li>
+        <li class="footer-item">
+          <a class="linkedin" href="">Linkedin</a>
+        </li>
+        <li class="footer-item">
+          <a href="#facebook">Facebook</a>
+        </li>
+        <li class="footer-item">
+          <a href="#instagram">Instagram</a>
+        </li>
       </ul>
     </div>
   </footer>
