--- a/code/index.html
+++ b/code/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Change the title below -->
-    <title>News Site</title>
+    <title>Mental Wellbeing</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
