--- a/code/index.html
+++ b/code/index.html
@@ -11,6 +11,23 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <nav>
+        <div id="logo">
+          <img src="./assets/icons8-doodle-91.png" alt="logo a pink heart">
+        </div>
+        <!--This is mobile menu-->
+        <div id="mobile-nav">
+          <span class="menu-line"></span>
+          <span class="menu-line"></span>
+          <span class="menu-line"></span>
+        </div>
+        <div id="dektop-nav">
+          <div a href="link-to-about">About</a></div>
+          <div a href="link-to-Articles"></a></div>
+          <div a href="link-to-contact"></a></div>
+        </div>
+      </nav>
+      <div id="topic"><p>MENTAL WELLBEING</p></div>
     </header>
 
     <section class="big-news">
