added all articles

--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
       <!-- Some kind of logo and navbar -->
       <nav>
         <div id="logo">
-          <img src="./assets/icons8-doodle-91.png" alt="logo a pink heart">
+        <img src="./assets/icons8-doodle-91.png" alt="logo a pink heart">
         </div>
         <!--This is mobile menu-->
         <div id="mobile-nav">
@@ -29,13 +29,56 @@
       </nav>
       <div id="topic"><p>MENTAL WELLBEING</p></div>
     </header>
-
+    <!-- The big news content -->
     <section class="big-news">
-      <!-- The big news content -->
+      <div>
+        <img src="./assets/Hand-of-mental-health_2022-1-810x1166.jpeg" alt="hand of mental health" id="big-news-img">
+      </div>
+      <div id="big-articles">
+        <h2>Hand of Mental Health</h2>
+        <p>Hand of Mental Health encourages us to reflect and discuss our everyday choices and their impact on our mental health. How does sleep and rest, food, relationships and emotions affect our mental wellbeing?</p>
+        <div><a href="https://mieli.fi/en/materials/hand-of-mental-health/">
+        <button>Read more</button></a>
+        </div>
+      </div>
     </section>
-
-    <section class="">
-      <!-- The other news  -->
+    <!-- The other news  -->
+    <section class="other articles">
+      <ul>
+        <li id="article-1">
+          <figure>
+            <img class="other-article-img" src="./assets/fabulous-woman-doing-yoga-and-meditating.png" alt="woman is doing yoga">
+            <figcaption><h2>Meditation</h2></figcaption>
+          </figure>
+          <p>When we meditate, we inject far-reaching and long-lasting benefits into our lives: We lower our stress levels, we get to know our pain, we connect better, we improve our focus, and we're kinder to ourselves. Let us walk you through the basics in our new mindful guide on how to meditate.</p>
+          <div><a href="https://www.mindful.org/how-to-meditate/"><button>Learn more</button></a></div>
+        </li>
+        <li id="article-2">
+          <figure>
+            <img class="other-article-img" src="./assets/puzzle-man-with-troubling-thoughts-inside-a-question-mark.png" alt="a man with troubling thoughts">
+            <figcaption><h2>Occupational Health</h2></figcaption>
+          </figure>
+          <p>Mental health is supported through proactive measures at workplaces — effective cooperation with occupational healthcare is of key importance</p>
+          <div><a href="https://mieli.fi/en/news/mental-health-is-supported-through-proactive-measures-at-workplaces-effective-cooperation-with-occupational-healthcare-is-of-key-importance/"><button>Learn more</button></a>
+          </div>
+        </li>
+        <li id="article-3">
+          <figure>
+            <img class="other-article-img" src="./assets/stripy-146.png" alt="a man is using computer">
+            <figcaption><h2>Imposter Syndrome</h2></figcaption>
+          </figure>
+          <p>Imposter syndrome is the psychological experience of feeling like a fake or a phony despite any genuine success that you have achieved. It's a very common and frustrating phenomenon because it holds us back from the self-confidence we've earned and deserve to feel.</p>
+          <div><a href="https://www.verywellmind.com/imposter-syndrome-and-social-anxiety-disorder-4156469"><button>Learn more</button></a></div>
+        </li>
+        <li id="article-4">
+          <figure>
+            <img class="other-article-img" src="./assets/memphis-email-marketing-with-promotional-newsletter.png" alt="email and newsletter">
+            <figcaption><h2>Nordic Health Survey 2023</h2></figcaption>
+          </figure>
+          <p>Are you interested in health situation in Nordic countries?</p>
+          <div><a href="https://www.if-insurance.com/large-enterprises/insight/the-nordic-health-survey-2023"><button>CLick me</button></a></div>
+        </li>
+      </ul>
     </section>
   </body>
 </html>
