--- a/code/index.html
+++ b/code/index.html
@@ -21,10 +21,10 @@
           <span class="menu-line"></span>
           <span class="menu-line"></span>
         </div>
-        <div id="dektop-nav">
+        <div id="desktop-nav">
           <div a href="link-to-about">About</a></div>
-          <div a href="link-to-Articles"></a></div>
-          <div a href="link-to-contact"></a></div>
+          <div a href="link-to-Articles">Articles</a></div>
+          <div a href="link-to-contact">Contact</a></div>
         </div>
       </nav>
       <div id="topic"><p>MENTAL WELLBEING</p></div>
@@ -36,7 +36,7 @@
       </div>
       <div id="big-articles">
         <h2>Hand of Mental Health</h2>
-        <p>Hand of Mental Health encourages us to reflect and discuss our everyday choices and their impact on our mental health. How does sleep and rest, food, relationships and emotions affect our mental wellbeing?</p>
+        <p>Hand of Mental Health encourages us to reflect and discuss our everyday choices and their impact on our mental health. <br>How does sleep and rest, food, relationships and emotions affect our mental wellbeing?</p>
         <div><a href="https://mieli.fi/en/materials/hand-of-mental-health/">
         <button>Read more</button></a>
         </div>
