--- a/code/index.html
+++ b/code/index.html
@@ -106,34 +106,35 @@ function showSlides() {
 </section>
 <section class="row-articles">
   <div class="img-column">
-    <img src="./images/04-Juniper-ebensperger.jpg" style="width:100%">
-    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></div>
-    <img src="./images/juniper-bonsai-rock-omiya.jfif" style="width:100%">
-    <div class="article-text"><h4>Find out about this tree</h4></div>
-    <img src="./images/7e851694-b98f-6db6-5ec0-7287ed0ca5e0_1024x1024.jpg" style="width:100%">
-    <div class="article-text"><h4>Find out about this tree</h4></div>
+    <a href="article-juniper.html"><img src="./images/04-Juniper-ebensperger.jpg" style="width:100%">
+    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <a href="article-omiya.html"><img src="./images/juniper-bonsai-rock-omiya.jfif" style="width:100%">
+    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <a href="article-bonsai1.html"><img src="./images/7e851694-b98f-6db6-5ec0-7287ed0ca5e0_1024x1024.jpg" style="width:100%">
+    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
   </div>
   <div class="img-column">
-    <img src="./images/photo-1627347902083-edbcaa5c4286.jfif" style="width:100%">
-    <div class="article-text"><h4>Find out about this tree</h4></div>
-    <img src="./images/3388114954_1f6e49d25e_z_310x@2x.jpg" style="width:100%">
-    <div class="article-text"><h4>Find out about this tree</h4></div>
+    <a href="article-bonsai2.html"><img src="./images/photo-1627347902083-edbcaa5c4286.jfif" style="width:100%">
+    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <a href="article-bonsai3.html"><img src="./images/3388114954_1f6e49d25e_z_310x@2x.jpg" style="width:100%">
+    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
   </div>
   <div class="img-column">
-    <img src="./images/artificial-bonsai-tree.jpg" style="width:100%">
-    <div class="article-text"><h4>Find out about this tree</h4></div>
-    <img src="./images/bonsai.1.jpg" style="width:100%">
-    <div class="article-text"><h4>Find out about this tree</h4></div>
-    <img src="./images/ccbd8ca24e78e509092af753272310d1.jpg" style="width:100%">
-    <div class="article-text"><h4>Find out about this tree</h4></div>
+    <a href="article-juniper2.html"><img src="./images/artificial-bonsai-tree.jpg" style="width:100%">
+    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <a href="article-juniper3.html"><img src="./images/bonsai.1.jpg" style="width:100%">
+    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <a href="article-juniper4.html"><img src="./images/ccbd8ca24e78e509092af753272310d1.jpg" style="width:100%">
+    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
   </div>
   <div class="img-column">
-    <img src="./images/bonsai3..jpg" style="width:100%">
-    <div class="article-text"><h4>Find out about this tree</h4></div>
-    <img src="./images/juniper-bonsai-the-classic-choice-for-beginners-19517f7a-8ae1-42b3-845f-5a7a2aa0a327.jpg" style="width:100%">
-    <div class="article-text"><h4>Find out about this tree</h4></div>
-  <img src="./images/How-to-Create-a-Cascade-Bonsai-Feature.jpg" style="width:100%">
-  <div class="article-text"><h4>Find out about this tree</h4></div>
+    <a href="article-bonsai4.html"><img src="./images/bonsai3..jpg" style="width:100%">
+    <div class="article-text"><h4>Find out about this tree</h4></a></div>
+    <a href="article-juniper5.html"><img src="./images/juniper-bonsai-the-classic-choice-for-beginners-19517f7a-8ae1-42b3-845f-5a7a2aa0a327.jpg" style="width:100%">
+    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <a href="article-juniper6.html"><img src="./images/How-to-Create-a-Cascade-Bonsai-Feature.jpg" style="width:100%">
+  <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+  
   </div>
 
 </section>
@@ -153,29 +154,29 @@ function showSlides() {
 </section>
 
     <section class="video-section">
-      <div class="instruction-video"><iframe width="711" height="400" src="https://www.youtube.com/embed/rLaFu3pHsi4?si=0AkoP9O701X-ng6M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-      <div class="video-text">
-        <h2><span>Learn how to create a Juniper Bonsai</span></h2>
+      <div class="instruction-video" id="juniper"><iframe src="https://www.youtube.com/embed/rLaFu3pHsi4?si=0AkoP9O701X-ng6M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+      <div class="video-text" id="juniper-text">
+        <h3><span>Learn how to create a Juniper Bonsai</span></h3>
         <p>this is an instruction video about</p>
       </div>
-
-      <div class="instruction-video"><iframe width="711" height="400" src="https://www.youtube.com/embed/r4hEPHEJTYU?si=vom_NGqrWe-5hDgW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-      <div class="video-text">
-      <h2><span>Visit Masahiko Kimura's Bonsai garden</span></h2>
-      <p>this is an instruction video about</p>
-    </div> 
-    
-      <div class="instruction-video"><iframe width="711" height="400" src="https://www.youtube.com/embed/__ZYsymsdn8?si=VdqXXJuIRlVvIHRI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-      <div class="video-text">
-        <h2><span>Repotting of Ponderosa Bonsai</span></h2>
+      <div class="instruction-video" id="kimura">
+        <iframe src="https://www.youtube.com/embed/r4hEPHEJTYU?si=vom_NGqrWe-5hDgW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+<div class="video-text" id="kimura-text">
+  <h3><span>Visit Masahiko Kimura's Bonsai garden</span></h3>
+  <p>this is an instruction video about</p>
+</div> 
+      <div class="instruction-video" id="repotting">
+        <iframe src="https://www.youtube.com/embed/__ZYsymsdn8?si=VdqXXJuIRlVvIHRI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+      <div class="video-text" id="repotting-text">
+        <h3><span>Repotting of Ponderosa Bonsai</span></h3>
         <p>this is an instruction video about</p>
+      
     </div>
     </section>
-
-    <h2>Learn the bonsai way</h2>
-  <h3>Follow the latest news of the bonsai society </h3>
-<p>Learn tips and tricks on pruning and shaping, grow and show your own miniature tree</p>
-<h3>Keep up with the most recent events, trends and happenings in the bonsai society.</h3>
-<p>Learn tips and tricks on pruning and shaping, grow and show your own miniature tree</p>
+    <footer>
+      <div class="footer">
+      </div>
+    </footer>
   </body>
 </html>
