new images and article text

--- a/code/index.html
+++ b/code/index.html
@@ -45,51 +45,62 @@
     <section class="news-grid">
       <!-- The other news  -->
       <div class="news-item">
-        <img src="./images/aloe.jpg" alt="picture of aloe">
-        <h3>Same same, but not really </h3>
-        <p>The succulent syndrome is considered to be one of the most remarkable examples of convergent evolution across
-          the plant kingdom.</p>
+        <img src="./images/euphorbia-ingens.jpg" alt="picture of euphorbia ingens">
+        <h3>Cactus or not? </h3>
+        <p>What is often mistaken for a cactus is actually a spieces from a whole different continent. In this article
+          we try to clear out the confusion between cacti and euphorbias </p>
       </div>
       <div class="news-item">
-        <img src="./images/aloe.jpg" alt="picture of aloe">
-        <h3>Aloe family</h3>
-        <p>Aloe family bla bla bla</p>
+        <img src="./images/repot1.jpg" alt="picture of cuttings">
+        <h3>Time to repot! </h3>
+        <p>Gravel, sand or store bought cacti mix? How to handle a plant covered in spines? We guide you through the art
+          of repotting succulents.</p>
       </div>
       <div class="news-item">
-        <img src="./images/aloe.jpg" alt="picture of aloe">
-        <h3>Aloe family</h3>
-        <p>Aloe family bla bla bla</p>
+        <img src="./images/gymnocalycium.jpg" alt="picture of gymnocalycium">
+        <h3>Beginner friendly cacti</h3>
+        <p>Don't know where to start? We've got you covered! Take a look at this list to find your new prickly friend.
+          Maybe it's an adorable Gymnocalycium Bruchii?
+        </p>
       </div>
       <div class="news-item">
-        <img src="./images/aloe.jpg" alt="picture of aloe">
-        <h3>Aloe family</h3>
-        <p>Aloe family bla bla bla</p>
+        <img src="./images/lithops.jpg" alt="picture of living stones">
+        <h3>Lithops - How to grow living stones</h3>
+        <p>Lithops have a very particular growing season. Here's how to care for the plants through their different
+          growth cycle stages.</p>
       </div>
       <div class="news-item">
-        <img src="./images/aloe.jpg" alt="picture of aloe">
-        <h3>Aloe family</h3>
-        <p>Aloe family bla bla bla</p>
+        <img src="./images/senecio.jpg" alt="picture of senecio">
+        <h3>A real drama queen</h3>
+        <p>Senecio grandiflorus, or The Queen of the Night is a legend among cactuslovers everywhere. Its impressive
+          giant yellow and white flowers can grow up to 30cm (!!!) large. Each individual bud opens completely during
+          only one single night. </p>
       </div>
       <div class="news-item">
-        <img src="./images/aloe.jpg" alt="picture of aloe">
-        <h3>Aloe family</h3>
-        <p>Aloe family bla bla bla</p>
+        <img src="./images/cylindropuntia.jpg" alt="picture of cylindropuntia">
+        <h3>Don't mess with us</h3>
+        <p>Why spines instead of leaves? "They can be a defense mechanism to discourage herbivores - animals that eat
+          plants - from eating the cactus.
+          But, also, spines create shade!" explains Kimberlie McCue.</p>
       </div>
       <div class="news-item">
-        <img src="./images/aloe.jpg" alt="picture of aloe">
-        <h3>Aloe family</h3>
-        <p>Aloe family bla bla bla</p>
+        <img src="./images/opuntia.jpg" alt="picture of prickly pear cactus">
+        <h3>Cactus that you can eat?</h3>
+        <p>Prickly pear cactus has been a Mexican and Central American dietary staple for thousands of years. Its flavor
+          is often compared to that of a melon or a kiwi, sometimes with a hint of bubblegum.</p>
       </div>
       <div class="news-item">
-        <img src="./images/aloe.jpg" alt="picture of aloe">
-        <h3>Aloe family</h3>
-        <p>Aloe family bla bla bla</p>
+        <img src="./images/moorten.jpg" alt="moorten botanical garden">
+        <h3>World's first cactarium</h3>
+        <p>Moorten Botanical Garden is a living museum of desert lore with more than 3000 varieties of plants. The
+          Moortens have invited us to a special exhibition of rare plants seen nowhere else.</p>
       </div>
     </section>
   </main>
 
   <footer>
-    <p>©</p>
+    <p>© 2024 SuccyNews</p>
+    <img src="./logo.svg" alt="technigo logo">
   </footer>
 </body>
 
