--- a/code/index.html
+++ b/code/index.html
@@ -44,22 +44,22 @@
 <section class="news-front">
   <div class="slideshow-container">
    <div class="my-slides fade">
-    <a href="stolen.html"><img src="./images/GettyImages-598322873-409b66c4895d492eb28fde9e752d98ad.jpg" style="width:100%">
+    <a href="stolen.html"><img src="./images/GettyImages-598322873-409b66c4895d492eb28fde9e752d98ad.jpg" rel="closup detailed bonsai tree" style="width:100%">
     <p>26.01.2024 10:56</p><h3>Stolen tree</h3><h4>A 400 year old Bonsai was stolen this thursday</h4>
   </a>
   </div>
   <div class="my-slides fade"> 
-    <a href="vandalism.html"><img src="./images/bonsai-img.vanl.jpg" style="width:100%">
+    <a href="vandalism.html"><img src="./images/bonsai-img.vanl.jpg" rel="american bonsai artist posing with tree on red backdrop" style="width:100%">
       <p>26.01.2024 10:45</p><h3>Famous Bonsai artis has his garden vandalized</h3><h4>Could be based on personal vendetta</h4>
     </a>
   </div>
   <div class="my-slides fade">
-    <a href="herbicide.html"><img src="./images/43-WhitePine1625-1.jpg" style="width:100%">
+    <a href="herbicide.html"><img src="./images/43-WhitePine1625-1.jpg" rel="thick bonsai tree on dark background" style="width:100%">
       <p>25.01.2024 07:28</p><h3>Several trees targeted and posioned to death</h3><h4>At least 23 trees are dead</h4>
     </a>
   </div>
   <div class="my-slides fade" id="last-image">
-    <a href="competition.html"><img src="./images/0D8A6785-2.jpg" style="width:100%">
+    <a href="competition.html"><img src="./images/0D8A6785-2.jpg" rel="Bonsai forest on diagonal platform" style="width:100%">
       <p>25.01.2024 16:34</p><h3>Winners for the Prestigious award The Trophy</h3><h4>See which trees that won</h4>
     </a>
   </div>
@@ -106,33 +106,33 @@ function showSlides() {
 </section>
 <section class="row-articles">
   <div class="img-column">
-    <a href="article-juniper.html"><img src="./images/04-Juniper-ebensperger.jpg" style="width:100%">
+    <a href="article-juniper.html"><img src="./images/04-Juniper-ebensperger.jpg" rel="famous bonsai tree on diagonal platform" style="width:100%">
     <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
-    <a href="article-omiya.html"><img src="./images/juniper-bonsai-rock-omiya.jfif" style="width:100%">
+    <a href="article-omiya.html"><img src="./images/juniper-bonsai-rock-omiya.jfif" rel="advanced bonsai tree on asian piedistal" style="width:100%">
     <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
-    <a href="article-bonsai1.html"><img src="./images/7e851694-b98f-6db6-5ec0-7287ed0ca5e0_1024x1024.jpg" style="width:100%">
-    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
-  </div>
-  <div class="img-column">
-    <a href="article-bonsai2.html"><img src="./images/photo-1627347902083-edbcaa5c4286.jfif" style="width:100%">
-    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
-    <a href="article-bonsai3.html"><img src="./images/3388114954_1f6e49d25e_z_310x@2x.jpg" style="width:100%">
+    <a href="article-bonsai1.html"><img src="./images/7e851694-b98f-6db6-5ec0-7287ed0ca5e0_1024x1024.jpg" rel="bonsai with thick wavy trunk" style="width:100%">
     <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
   </div>
   <div class="img-column">
-    <a href="article-juniper2.html"><img src="./images/artificial-bonsai-tree.jpg" style="width:100%">
+    <a href="article-bonsai2.html"><img src="./images/photo-1627347902083-edbcaa5c4286.jfif" rel="Beutiful bonsai outdoors" style="width:100%">
     <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
-    <a href="article-juniper3.html"><img src="./images/bonsai.1.jpg" style="width:100%">
-    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
-    <a href="article-juniper4.html"><img src="./images/ccbd8ca24e78e509092af753272310d1.jpg" style="width:100%">
+    <a href="article-bonsai3.html"><img src="./images/3388114954_1f6e49d25e_z_310x@2x.jpg" rel="artificial bonsai tree" style="width:100%">
     <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
   </div>
   <div class="img-column">
-    <a href="article-bonsai4.html"><img src="./images/bonsai3..jpg" style="width:100%">
+    <a href="article-juniper2.html"><img src="./images/artificial-bonsai-tree.jpg" rel="bonsai tree with tall straight trunk"  style="width:100%">
+    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <a href="article-juniper3.html"><img src="./images/bonsai.1.jpg" rel="closup femaile bonsai artist caring for bonsai" style="width:100%">
+    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <a href="article-juniper4.html"><img src="./images/ccbd8ca24e78e509092af753272310d1.jpg" rel="bonsai tree on grey background" style="width:100%">
+    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+  </div>
+  <div class="img-column">
+    <a href="article-bonsai4.html"><img src="./images/bonsai3..jpg" rel="male bonsai artist standing next to bonsai tree" style="width:100%">
     <div class="article-text"><h4>Find out about this tree</h4></a></div>
-    <a href="article-juniper5.html"><img src="./images/juniper-bonsai-the-classic-choice-for-beginners-19517f7a-8ae1-42b3-845f-5a7a2aa0a327.jpg" style="width:100%">
+    <a href="article-juniper5.html"><img src="./images/juniper-bonsai-the-classic-choice-for-beginners-19517f7a-8ae1-42b3-845f-5a7a2aa0a327.jpg" rel="man working on bonsai tree" style="width:100%">
     <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
-    <a href="article-juniper6.html"><img src="./images/How-to-Create-a-Cascade-Bonsai-Feature.jpg" style="width:100%">
+    <a href="article-juniper6.html"><img src="./images/How-to-Create-a-Cascade-Bonsai-Feature.jpg" style="width:100%" rel="hand holding bonsai tree">
   <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
   
   </div>
@@ -154,20 +154,20 @@ function showSlides() {
 </section>
 
     <section class="video-section">
-      <div class="instruction-video" id="juniper"><iframe src="https://www.youtube.com/embed/rLaFu3pHsi4?si=0AkoP9O701X-ng6M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+      <div class="instruction-video" id="juniper"><iframe src="https://www.youtube.com/embed/rLaFu3pHsi4?si=0AkoP9O701X-ng6M" rel="video of how to create a juniper bonsai" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
       <div class="video-text" id="juniper-text">
         <h3><span>Learn how to create a Juniper Bonsai</span></h3>
         <p>this is an instruction video about</p>
       </div>
       <div class="instruction-video" id="kimura">
-        <iframe src="https://www.youtube.com/embed/r4hEPHEJTYU?si=vom_NGqrWe-5hDgW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/r4hEPHEJTYU?si=vom_NGqrWe-5hDgW" rel="video of Masahiko kimuras garden" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 <div class="video-text" id="kimura-text">
   <h3><span>Visit Masahiko Kimura's Bonsai garden</span></h3>
   <p>this is an instruction video about</p>
 </div> 
       <div class="instruction-video" id="repotting">
-        <iframe src="https://www.youtube.com/embed/__ZYsymsdn8?si=VdqXXJuIRlVvIHRI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+        <iframe src="https://www.youtube.com/embed/__ZYsymsdn8?si=VdqXXJuIRlVvIHRI" rel="Repotting of Ponderosa Bonsai" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
       <div class="video-text" id="repotting-text">
         <h3><span>Repotting of Ponderosa Bonsai</span></h3>
         <p>this is an instruction video about</p>
