test overflow scrollbar

--- a/code/index.html
+++ b/code/index.html
@@ -63,8 +63,12 @@
       <p>25.01.2024 16:34</p><h3>Winners for the Prestigious award The Trophy</h3><h4>See which trees that won</h4>
     </a>
   </div>
+  <div class="extra-news">
+  <a href="red-bonsai"><img src="./images/a_045_nov.jpg" rel="red bonsai tree">
+    <p>25.01.2024 07:28</p><h3>See this beautiful blood red tree, in november</h3> </a>
+  </div>
 </div>
-
+ 
 <script>
  let slideIndex = 0;
 showSlides(); 
